# unittest

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  example.cpp  example.hpp  main.cpp.in  unittest.cmake
examples/: CMakeLists.txt  main.cpp  test_example.hpp
examples/libexample/: CMakeLists.txt  example.cpp
examples/libexample/include/libexample/: example.hpp
examples/python_equivalent/: mynamespace.py  test_example.py
include/unittest/: begin_main.hpp  end_main.hpp  unittest.hpp
include/unittest/detail/: exceptions.hpp  testrunner.hpp
